<resources>
    <string name="app_name">SmartTime</string>

    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="Personalizar">Personalizar</string>
    <string name="control">Control</string>
    <string name="notisText">Notificaciones</string>
    <string name="oscuro">Tema Oscuro</string>
    <string name="autocheck">Auto Checking</string>

    <string name="perfil">Ajustes de Cuenta</string>
    <string name="Temas">Temas</string>
    <string name="cerrar">Cerrar sesion</string>
    <string name="info">Informacion</string>

    <string name="registro">Registrarse</string>


    <string name="mail">Email o Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="logFacebook">REGISTRATE CON FACEBOOK</string>
    <string name="logTwitter">REGISTRATE CON TWITTER</string>
    <string name="logGoogle">REGISTRATE CON GOOGLE</string>
    <string name="button">Button</string>
    <string name="logIn">INICIAR SESION</string>
    <string name="logInBanner">Login</string>

    <string name="done">Done</string>
    <string name="skipped">Skipped</string>
    <string name="fail">Fail</string>

    <string-array name="filtros_amigos">
        <item>Ordenar por</item>
        <item>Más recientes</item>
        <item>Hábitos</item>
        <item>A-Z</item>
        <item>Z-A</item>
    </string-array>

    <string name="selected_date">Sábado, 10 de Enero</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SmartTime</string>
    <string name="nav_header_subtitle">Mejora tu día a día</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Progreso</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="usuarioInsertado">Usuario insertado</string>
    <string name="errorInsertandoUsuario">Error</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo electrónico</string>
    <string name="confirmar">Confirmar</string>
    <string name="amigos">Amigos</string>
</resources>