<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/circuloFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:clickable="true"
        app:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circuloSkip"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/circuloSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:backgroundTint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circuloDone"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/circuloDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/verde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="370dp"
        android:layout_height="299dp"
        android:layout_marginTop="52dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:text="@string/reading"
        android:textAlignment="center"
        android:textColor="@color/verde"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <TextView
        android:id="@+id/nDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="15"
        app:layout_constraintStart_toEndOf="@+id/circuloDone"
        tools:layout_editor_absoluteY="366dp" />

    <TextView
        android:id="@+id/tDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/done"
        app:layout_constraintStart_toEndOf="@+id/circuloDone"
        app:layout_constraintTop_toBottomOf="@+id/nDone" />

    <TextView
        android:id="@+id/nSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="100"
        app:layout_constraintStart_toEndOf="@+id/circuloSkip"
        tools:layout_editor_absoluteY="437dp" />

    <TextView
        android:id="@+id/tSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/skipped"
        app:layout_constraintStart_toEndOf="@+id/circuloSkip"
        app:layout_constraintTop_toBottomOf="@+id/nSkip" />

    <TextView
        android:id="@+id/nFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="147"
        app:layout_constraintStart_toEndOf="@+id/circuloFail"
        tools:layout_editor_absoluteY="508dp" />

    <TextView
        android:id="@+id/tFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/fail"
        app:layout_constraintStart_toEndOf="@+id/circuloFail"
        app:layout_constraintTop_toBottomOf="@+id/nFail" />
</androidx.constraintlayout.widget.ConstraintLayout>